--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/a-component-library.min.js",
   "scripts": {
     "build": "rollup -c -o dist/a-component-library.min.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "Jan Jaap Braam",
   "license": "MIT",
@@ -13,11 +15,17 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-links": "^5.1.11",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/react": "^5.1.11",
+    "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "rollup": "^1.20.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-uglify-es": "0.0.1"
-  }
+  },
+  "dependencies": {}
 }
