--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "@storybook/react": "^5.1.11",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^3.2.0",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "rollup": "^1.20.1",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-uglify-es": "0.0.1"
+    "rollup-plugin-scss": "^1.0.2",
+    "rollup-plugin-uglify-es": "0.0.1",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^1.0.0"
   },
   "dependencies": {}
 }
